# qroma-hat.old2

./: .gitignore  .gitmodules  DIRECTORY-LAYOUT.md  qroma.toml  sitemap.xml
.github/workflows/: main.yml  test-deploy.yml
apps/dgsr_python_viewer/: dgsr_loader.py  dgsr_viewer.py  qroma_hat.dgsr
apps/py-qroma-hat/: image_byte_report.txt  parse_byte_report.py  parse_qroma_comm_command.py  parse_qroma_comm_response.py  py_qroma_upload2.py  py_qroma_validate_file.py  pyproject.toml  qroma_hat_from_esp32.dgsr  settings.py  show_firmware_details.py
apps/py-qroma-hat/qroma_proto/: my_project_messages_pb2.py
assets/js/: 0110bdc5.ab198bf2.js  01a85c17.56ecdcc2.js  065b2e3e.c61aeaf6.js  065b2e3e.d42e8d58.js  0974a46c.87aa1978.js  0e384e19.6044aab7.js  17896441.4735bec4.js  1b7bd04c.21a1bbb5.js  1f391b9e.636fcbf2.js  2237.98cc74e1.js  22e62794.a81b71d3.js  2ae9c98b.86b8d5dd.js  3053e565.264eb36e.js  336ebae5.c44d1cfc.js  36448c4f.41ceeedf.js  3bde1698.64dba271.js  3c7e7a04.ac9f863a.js  4060.58d4d4e8.js  45ffadab.a8829d55.js  45ffadab.d016824a.js  471af7dd.805524c9.js  471af7dd.b6c69c8e.js  4815bad5.85781c4c.js  4815bad5.fc007158.js  517bcacf.b755c58f.js  5533.7e868ae5.js  59362658.55c31fcb.js  5e95c892.db1020a3.js  6173b105.9b527a4b.js  658010ae.f4611334.js  67354e7a.39084d2e.js  685c3d6e.e8c27f15.js  6875c492.b3f84396.js  7312.2a1fad3c.js  7312.651269e4.js  73664a40.2365219c.js  74cf356a.53874241.js  760a15ff.6e55a5b8.js  7661071f.2258525b.js  7f16512f.49559bc0.js  (+58 more)
blog/: atom.xml  rss.xml
blog/tags/: index.html
docs/parts/: index.html
monitor-device/: index.html
(+141 files in other folders)
