[tool.poetry]
name = "py-qroma-hat"
version = "0.1.0"
description = ""
authors = ["Albert Boehmler <ajboehmler@gmail.com>"]
readme = "README.md"
#packages = [{include = "py_qroma_hat"}]

[tool.poetry.dependencies]
python = "^3.11"
py-qroma = {path = "C:/Users/ajb/Projects/qromatech/qroma-libraries/py-qroma", develop = true}
aioserial = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
